--- a/G00397072/src/app/tab1/tab1.page.html
+++ b/G00397072/src/app/tab1/tab1.page.html
@@ -1,17 +1,105 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
+    <ion-title class=>
       Tab 1
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-grid class="ion-padding">
+   <!--<ion-row >
+      <ion-col size="3.6">
+        Exercise
+      </ion-col>
+      <ion-col size="2.4">
+        Sets
+      </ion-col>
+      <ion-col size="2.4">
+        Reps
+      </ion-col>
+      <ion-col size="3">
+        Weight
+      </ion-col>
+    </ion-row>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+    <ion-row >
+      <ion-col size="4">
+        Exercise
+      </ion-col>
+      <ion-col size="2">
+        Sets
+      </ion-col>
+      <ion-col size="2">
+        Reps
+      </ion-col>
+      <ion-col size="2">
+        Weight
+      </ion-col>
+      <ion-col size="2">
+        <ion-checkbox></ion-checkbox>
+      </ion-col>
+    </ion-row>
+
+    <ion-row >
+      <ion-col size="4">
+        Exercise
+      </ion-col>
+      <ion-col size="2">
+        Sets
+      </ion-col>
+      <ion-col size="2">
+        Reps
+      </ion-col>
+      <ion-col size="2">
+        Weight
+      </ion-col>
+      <ion-col size="2">
+        <ion-checkbox></ion-checkbox>
+      </ion-col>
+    </ion-row>
+
+    <ion-row >
+      <ion-col size="4">
+        Exercise
+      </ion-col>
+      <ion-col size="2">
+        Sets
+      </ion-col>
+      <ion-col size="2">
+        Reps
+      </ion-col>
+      <ion-col size="2">
+        Weight
+      </ion-col>
+      <ion-col size="2">
+        <ion-checkbox></ion-checkbox>
+      </ion-col>
+    </ion-row>
+
+    <ion-row >
+      <ion-col size="4">
+        Exercise
+      </ion-col>
+      <ion-col size="2">
+        Sets
+      </ion-col>
+      <ion-col size="2">
+        Reps
+      </ion-col>
+      <ion-col size="2">
+        Weight
+      </ion-col>
+      <ion-col size="2">
+        <ion-checkbox></ion-checkbox>
+      </ion-col>
+    </ion-row>--> 
+
+    <ion-list>
+      <ion-item *ngFor="let exercise of ArmsData">
+        {{exercise.name}}
+        <ion-checkbox></ion-checkbox>
+      </ion-item>
+    </ion-list>
+  </ion-grid>
 </ion-content>
