--- a/G00397072/src/app/tab1/tab1.page.html
+++ b/G00397072/src/app/tab1/tab1.page.html
@@ -19,7 +19,7 @@
             {{exercise.name}}
           </ion-col>
           <ion-col size="3">
-            <ion-checkbox></ion-checkbox>
+            <ion-checkbox (ionChange)="state = !state" (ionChange)="name = exercise.name" (ionChange)="SaveSelected()"></ion-checkbox>
           </ion-col>
         </ion-row>
       </ion-grid>
@@ -36,7 +36,7 @@
             {{exercise.name}}
           </ion-col>
           <ion-col size="3">
-            <ion-checkbox></ion-checkbox>
+            <ion-checkbox (ionChange)="state = !state" (ionChange)="name = exercise.name" (ionChange)="SaveSelected()"></ion-checkbox>
           </ion-col>
         </ion-row>
       </ion-grid>
@@ -53,7 +53,7 @@
             {{exercise.name}}
           </ion-col>
           <ion-col size="3">
-            <ion-checkbox></ion-checkbox>
+            <ion-checkbox (ionChange)="state = !state" (ionChange)="name = exercise.name" (ionChange)="SaveSelected()"></ion-checkbox>
           </ion-col>
         </ion-row>
       </ion-grid>
@@ -70,7 +70,7 @@
             {{exercise.name}}
           </ion-col>
           <ion-col size="3">
-            <ion-checkbox></ion-checkbox>
+            <ion-checkbox (ionChange)="state = !state" (ionChange)="name = exercise.name" (ionChange)="SaveSelected()"></ion-checkbox>
           </ion-col>
         </ion-row>
       </ion-grid>
