Added local music player and storage
4th tab now has options to play local audio files. 3rd tab has a save and load button for saving/loading workout routines.

--- a/G00397072/src/app/tabs/tabs.page.html
+++ b/G00397072/src/app/tabs/tabs.page.html
@@ -3,17 +3,18 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="triangle"></ion-icon>
-      <ion-label>Upper Body</ion-label>
+      <ion-label>Upper<br>Body
+      </ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Lower Body</ion-label>
+      <ion-label>Lower<br>Body</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
       <ion-icon name="square"></ion-icon>
-      <ion-label>Full Body</ion-label>
+      <ion-label>Your<br>Routine</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab4">
