--- a/G00397072/src/app/tab3/tab3.page.html
+++ b/G00397072/src/app/tab3/tab3.page.html
@@ -10,4 +10,13 @@
   <ion-list>
     <ion-item *ngFor="let exercise of exercises"> {{exercise}}</ion-item>
   </ion-list>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="2"></ion-col>
+      <ion-col ><ion-button (click)="SaveToStorage()">Save</ion-button></ion-col>
+      <ion-col ><ion-button (click)="LoadFromStorage()">Load</ion-button></ion-col>
+      <ion-col size="2"></ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
