--- a/G00397072/src/app/tab4/tab4.page.html
+++ b/G00397072/src/app/tab4/tab4.page.html
@@ -7,11 +7,25 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 4</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list>
+    <ion-radio-group value="tracks">
+      <ion-list-header>
+        <ion-label>Select a Track</ion-label>
+      </ion-list-header>
+  
+      <ion-item *ngFor="let track of tracks">
+        <ion-label>{{track}}</ion-label>
+        <ion-radio slot="start" value="{{track}}" (click)="currentTrack = track"></ion-radio>
+      </ion-item>
+    </ion-radio-group>
+  </ion-list>
 
-  <app-explore-container name="Tab 4 page"></app-explore-container>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="2"></ion-col>
+      <ion-col ><ion-button (click)="PlaySong()">Play</ion-button></ion-col>
+      <ion-col ><ion-button (click)="StopPlaying()">Stop</ion-button></ion-col>
+      <ion-col size="2"></ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
