--- a/G00397072/src/app/tabs/tabs.page.html
+++ b/G00397072/src/app/tabs/tabs.page.html
@@ -1,5 +1,6 @@
 <ion-tabs>
-
+  <!-- 4 tabs that will display at the bottom of the screen to allow navigation between pages
+  // the first 3 were auto generated using the tabs template, added a 4th one manually-->
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="triangle"></ion-icon>
