--- a/G00397072/src/app/tab2/tab2.page.html
+++ b/G00397072/src/app/tab2/tab2.page.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content>
+  <ion-label>Choose Your Lower Body Exercises From the List Below</ion-label>
   <ion-accordion-group>
     <ion-accordion value="Legs">
       <ion-item slot="header">
