--- a/G00397072/src/app/tab3/tab3.page.html
+++ b/G00397072/src/app/tab3/tab3.page.html
@@ -7,10 +7,18 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <!--Display the list of exercises chosen from the lists on tab 1 and 2-->
+  <ion-label>Upper Body Exercises</ion-label>
   <ion-list>
-    <ion-item *ngFor="let exercise of exercises"> {{exercise}}</ion-item>
+    <ion-item *ngFor="let exercise of exercisesUpper"> {{exercise}}</ion-item>
   </ion-list>
 
+  <ion-label>Lower Body Exercises</ion-label>
+  <ion-list>
+    <ion-item *ngFor="let exercise of exercisesLower"> {{exercise}}</ion-item>
+  </ion-list>
+
+  <!-- Allow the user to save/load their selection-->
   <ion-grid>
     <ion-row>
       <ion-col size="2"></ion-col>
